Fixed overflow

--- a/login-form/main.css
+++ b/login-form/main.css
@@ -13,6 +13,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
+  overflow: hidden;
 }
 
 .container {
